# deepin-metacity

./: .gitignore  CHANGELOG.md  configure.ac  update_deepin_metacity.sh
debian/: README.Debian  changelog  control  control.in  copyright  deepin-metacity-common.install  deepin-metacity-common.sgmlcatalogs  deepin-metacity.postinst  deepin-metacity.prerm  libdeepin-metacity-dev.install  libdeepin-metacity-private3.symbols  libdeepin-metacity-private3.symbols.bak  rules  shlibs.local
debian/.zcache/: DEBS_installed
debian/patches/: check_display.diff  series
doc/: compositor-control.txt
doc/creating_themes/: Makefile.am
doc/creating_themes/C/: index.docbook
doc/man/: Makefile.am
po/: POTFILES.in  zh_CN.po
src/: 50-metacity-navigation.xml.in  50-metacity-system.xml.in  50-metacity-windows.xml.in  Makefile.am  com.deepin.Metacity.DisplayConfig.xml  com.deepin.wm.xml  deepin-keybindings.c  deepin-keybindings.h  deepin-wm.css  libmetacity-private.pc.in  metacity-schemas.convert  org.gnome.metacity.gschema.xml.in
src/compositor/: compositor-xrender.c
src/core/: atomnames.h  constraints.c  core.c  deepin-corner-indicator.c  deepin-corner-indicator.h  deepin-dbus-service.c  deepin-keybindings.c  deepin-keybindings.h  deepin-message-hub.c  deepin-timeline.c  display-private.h  display.c  frame-private.h  frame.c  keybindings.c  keybindings.h  main-private.c  main.c  meta-monitor-config.c  meta-monitor-manager-private.h  meta-monitor-manager-xrandr.c  meta-monitor-manager.c  prefs.c  screen-private.h  screen.c  stack.c  util.c  window-private.h  window-props.c  window.c  workspace.c  workspace.h
src/include/: common.h  deepin-animation-image.h  deepin-background-cache.h  deepin-cloned-widget.h  deepin-dbus-service.h  deepin-design.h  deepin-desktop-background.h  deepin-ease.h  deepin-fixed.h  deepin-message-hub.h  deepin-name-entry.h  deepin-shadow-workspace.h  deepin-stackblur.h  deepin-stated-image.h  deepin-switch-previewer-simple.h  deepin-switch-previewer.h  deepin-tab-widget.h  deepin-tabpopup.h  deepin-timeline.h  deepin-window-surface-manager.h  deepin-wm-background.h  deepin-workspace-adder.h  deepin-workspace-indicator.h  deepin-workspace-overview.h  deepin-workspace-preview-entry.h  main.h  prefs.h  ui.h  util.h
src/themes/: Makefile.am
src/ui/: deepin-animation-image.c  deepin-background-cache.c  deepin-cloned-widget.c  deepin-cloned-widget.h  deepin-design.c  deepin-design.h  deepin-desktop-background.c  deepin-ease.c  deepin-fixed.c  deepin-fixed.h  deepin-menu.c  deepin-menu.h  deepin-name-entry.c  deepin-shadow-workspace.c  deepin-stackblur.c  deepin-stackblur.h  deepin-stated-image.c  deepin-switch-previewer-simple.c  deepin-switch-previewer.c  deepin-switch-previewer.h  deepin-tab-widget.c  deepin-tab-widget.h  deepin-tabpopup.c  deepin-window-surface-manager.c  deepin-wm-background.c  deepin-workspace-adder.c  deepin-workspace-indicator.c  deepin-workspace-overview.c  deepin-workspace-preview-entry.c  frames.c  select-image.c  tabpopup-private.h  tabpopup.c  theme-parser.c  theme.c  tile-preview.c  ui.c
